--- a/resume/css/yue.css
+++ b/resume/css/yue.css
@@ -9,7 +9,7 @@
 
 
 .yue {
-  font: 400 18px/1.62 "Georgia", "Xin Gothic", "Hiragino Sans GB", "Droid Sans Fallback", "Microsoft YaHei", sans-serif;
+  font: 400 18px/1.62 "Hiragino Sans GB","Microsoft YaHei","微软雅黑",Georgia,tahoma,arial,simsun,"宋体",sans-serif;
   color: #444443;
 }
 
